--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title SQL Library Manager
-        link(rel="stylesheet", href="../stylesheets.style.css")
+        link(rel="stylesheet", href="/static/stylesheets/style.css")
     body
         .container
             block content
